--- a/source/less/blocks/how-it-is-work.less
+++ b/source/less/blocks/how-it-is-work.less
@@ -1,6 +1,4 @@
-@mobile: 320px;
-@tablet: 768px;
-@desktop: 1220px;
+@import url("variables.less");
 
 .how-it-is-work__green {
   margin-right: 21px;
@@ -38,7 +36,11 @@
     margin-bottom: 20px;
   }
 
-  .works-item__image {
+  .how-it-is-work__br-none {
+    display: none;
+  }
+
+  .how-it-is-work__works-item-image {
     margin-top: 5px;
   }
 
@@ -104,7 +106,7 @@
   }
 
   .how-it-is-work__sub-text-first-child {
-    max-width: 202px;
+    max-width: 203px;
     margin-top: 33px;
   }
 
@@ -114,12 +116,12 @@
   }
 
   .how-it-is-work__sub-text-third-child {
-    max-width: 204px;
+    max-width: 205px;
     margin-top: 33px;
   }
 
   .how-it-is-work__sub-text-fourth-child {
-    max-width: 245px;
+    max-width: 246px;
     margin-top: 34px;
   }
 
@@ -197,7 +199,7 @@
     background-position: 123px 1px;
     padding-bottom: 52px;
     padding-right: 40px;
-    margin-left: 83px;
+    margin-left: 82px;
   }
 
   .how-it-is-work__sub-fourth-child {
@@ -209,9 +211,21 @@
     margin-left: 79px;
   }
 
+  .how-it-is-work__br-none {
+    display: none;
+  }
+
   .how-it-is-work__sub-text {
     font-size: 16px;
     line-height: 24px;
     margin-top: 32px;
+  }
+
+  .how-it-is-work__header {
+    max-width: 600px;
+  }
+
+  .how-it-is-work__sub {
+    max-width: 245px;
   }
 }
