--- a/source/less/blocks/header-background.less
+++ b/source/less/blocks/header-background.less
@@ -1,69 +1,4 @@
-@white: #fff;
-@mobile: 320px;
-@tablet: 768px;
-@desktop: 1220px;
-@desktop-adaptive:1440px;
-@retina-dpi: 144dpi;
-@retina-dppx: 1.5dppx;
-
-@font-face {
-  font-family: "fontello";
-  src: url("../font/fontello.eot?11710255");
-  src: url("../font/fontello.eot?11710255#iefix") format("embedded-opentype"), url("../font/fontello.woff2?11710255") format("woff2"), url("../font/fontello.woff?11710255") format("woff"), url("../font/fontello.ttf?11710255") format("truetype"), url("../font/fontello.svg?11710255#fontello") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-
-
-/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
-
-
-/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
-
-
-/*
-@media screen and (-webkit-min-device-pixel-ratio:0) {
-  @font-face {
-    font-family: 'fontello';
-    src: url('../font/fontello.svg?11710255#fontello') format('svg');
-  }
-}
-*/
-
-[class^="icon-"]::before,
-[class*=" icon-"]::before {
-  font-family: "fontello", sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  display: inline-block;
-  text-decoration: inherit;
-  width: 1em;
-  margin-right: 0.2em;
-  text-align: center;
-  /* opacity: .8; */
-  /* For safety - reset parent styles, that can break glyph codes*/
-  font-variant: normal;
-  text-transform: none;
-  /* fix buttons height, for twitter bootstrap */
-  line-height: 1em;
-  /* Animation center compensation - margins should be symmetric */
-  /* remove if not needed */
-  margin-left: 0.2em;
-  /* you can be more comfortable with increased icons size */
-  /* font-size: 120%; */
-  /* Font smoothing. That was taken from TWBS */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  /* Uncomment for 3D effect */
-  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
-}
-
-.icon-check-empty::before {
-  content: "\f096";
-}
-
-
-/* 'п‚–' */
+@import url("variables.less");
 
 .header-background__work-for-your-cat {
   font-size: 14px;
@@ -71,10 +6,15 @@
   font-family: "Oswald-Regular", "Arial", sans-serif;
   color: @white;
   font-weight: normal;
-  margin-top: 24px;
-  margin-left: -4px;
+  margin-top: 25px;
+  margin-left: -2px;
   margin-bottom: 302px;
   text-transform: uppercase;
+}
+
+.header-background {
+  max-width: 320px;
+  margin: 0 auto;
 }
 
 @media (min-width: @mobile) {
@@ -102,6 +42,7 @@
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
       background-image: url("../img/index-background-mobile@2x.jpg");
       background-position: 50% center;
+      background-size: cover;
     }
   }
 
@@ -116,11 +57,13 @@
   .header-background__img {
     position: absolute;
     top: 167px;
-    left: 20px;
+    left: 22px;
+    width: 278px;
+    height: 272px;
   }
 
   .header-background {
-    padding: 27px 0 0 0;
+    padding: 26px 0 0 1px;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -138,7 +81,7 @@
     color: @white;
   }
 
-  .check-your-program {
+  .header-background__check-your-program {
     font-size: 14px;
     line-height: 18px;
     font-family: "Oswald-Regular", "Arial", sans-serif;
@@ -146,7 +89,7 @@
     color: @white;
     background-color: #68b738;
     text-decoration: none;
-    padding: 11px 76px 12px 74px;
+    padding: 11px 73px 12px 73px;
     display: flex;
     justify-content: center;
     text-transform: uppercase;
@@ -174,7 +117,7 @@
     color: black;
     max-width: 448px;
     margin-top: 15px;
-    margin-left: 115px;
+    margin-left: 113px;
     text-align: left;
     margin-bottom: 36px;
     letter-spacing: 0;
@@ -186,9 +129,9 @@
     color: #111111;
     max-width: 284px;
     display: flex;
-    margin-left: 115px;
+    margin-left: 114px;
     margin-bottom: 0;
-    margin-top: 40px;
+    margin-top: 42px;
   }
 
   .header-background {
@@ -204,11 +147,13 @@
     position: absolute;
     left: 25px;
     top: 241px;
+    width: 712px;
+    height: 611px;
   }
 
-  .check-your-program {
+  .header-background__check-your-program {
     margin-bottom: 507px;
-    margin-top: 49px;
+    margin-top: 48px;
     max-width: 246px;
     margin-left: 115px;
     font-size: 20px;
@@ -239,11 +184,11 @@
   .header-background::after {
     content: "";
     display: block;
-    width: 50%;
-    height: 668px;
+    width: 52%;
+    height: 695px;
     position: absolute;
-    top: -16%;
-    right: 0%;
+    top: -20.6%;
+    right: -1.9%;
     margin-left: auto;
     background-color: #65a93c;
     background-image: url(../img/index-background-mobile.png);
@@ -251,11 +196,6 @@
     background-position: 210px -17px;
     background-repeat: no-repeat;
     background-size: 593px 700px;
-
-    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
-      background-image: url("img/index-background-desktop@2x.jpg");
-      background-size: 1338px auto;
-    }
   }
 
   .header-background__headers {
@@ -275,7 +215,7 @@
     margin-left: 79px;
     margin-bottom: 0;
     margin-top: 17px;
-    max-width: 414px;
+    max-width: 417px;
   }
 
   .header-background__work-for-your-cat {
@@ -284,12 +224,8 @@
     max-width: 284px;
   }
 
-  .menu-main__sub-menu-elem {
-    padding-top: 15px;
-  }
-
-  .check-your-program {
-    margin-top: 47px;
+  .header-background__check-your-program {
+    margin-top: 45px;
     margin-left: 78px;
     font-size: 20px;
     line-height: 20px;
@@ -302,33 +238,36 @@
     position: absolute;
     top: 10px;
     right: 219px;
-    left: 450px;
+    left: 451px;
+    width: 551px;
+    height: 499px;
   }
 
-  .check-your-program:hover {
+  .header-background__check-your-program:hover {
     background-color: #5eaa2f;
   }
 
-  .check-your-program:active {
+  .header-background__check-your-program:active {
     background-color: #5eaa2f;
     color: #8fc46e;
   }
 }
-@media (min-width:@desktop-adaptive) {
+
+@media (min-width: @desktop-adaptive) {
   .header-background::after {
     content: "";
     display: block;
     width: 720px;
-    height: 668px;
+    height: 697px;
     position: absolute;
-    top: -16%;
-    right: -8.79%;
+    top: -21%;
+    right: -9%;
     margin-left: auto;
     background-color: #65a93c;
-    background-image: url(../img/index-background-mobile.png);
+    background-image: url(../img/index-background-desktop@2x.jpg);
     z-index: -10000;
-    background-position: 210px -17px;
+    background-position: 10px 0px;
     background-repeat: no-repeat;
-    background-size: 593px 700px;
-}
+    background-size: 700px 700px;
+  }
 }
