--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,6 +1,4 @@
-@mobile: 320px;
-@tablet: 768px;
-@desktop: 1220px;
+@import url("variables.less");
 
 .map__communicating {
   padding-top: 28px;
@@ -17,7 +15,14 @@
   margin-top: -1px;
 }
 
+
 @media (min-width: @mobile) {
+  .map__iframe {
+    border: 0;
+    height: 363px;
+    width: 100%;
+  }
+
   .map__communicating-main-text {
     max-width: 280px;
     margin: 0 auto;
@@ -26,19 +31,24 @@
 
   .map__communicating-address {
     font-family: "Arial", "Tahoma", sans-serif;
-    max-width: 135px;
+    max-width: 136px;
     font-size: 14px;
     line-height: 20px;
   }
 
   .map__communicating-offer-communicating {
-    max-width: 122px;
+    max-width: 124px;
     font-size: 16px;
     line-height: 20px;
     color: #111111;
     text-transform: uppercase;
     font-family: "Oswald-Regular", "Arial", sans-serif;
-    margin-right: 19px;
+    margin-right: 17px;
+    margin-top: -1px;
+  }
+
+  .map__communicating-offer-communicating-catalog {
+    margin-top: 0;
   }
 
   .map__communicating-form {
@@ -46,9 +56,36 @@
     max-width: 320px;
     margin: 0 auto;
   }
+
+  .map__img {
+    background-image: url(../img/bg-map-mobile@1x.png);
+    width: 100%;
+    height: 363px;
+    background-position: -1px -39px;
+    background-repeat: no-repeat;
+    background-size: 100% 401px;
+    position: relative;
+  }
+
+  .map__map-pin {
+    position: absolute;
+    top: 138px;
+    left: 130px;
+    width: 61px;
+  }
+
+  .map {
+    margin: 0 auto;
+    max-width: 320px;
+  }
 }
 
 @media (min-width: @tablet) {
+  .map {
+    margin: 0 auto;
+    max-width: 768px;
+  }
+
   .map__communicating-form {
     max-width: 768px;
     margin-top: 77px;
@@ -78,7 +115,7 @@
   .map__communicating-address {
     text-align: right;
     margin-right: 38px;
-    margin-top: 36px;
+    margin-top: 34px;
     font-size: 16px;
     line-height: 20px;
     max-width: 185px;
@@ -93,9 +130,11 @@
   .map__communicating__address-form {
     display: flex;
     flex-direction: column;
+    width: 166px;
+    max-width: 166px;
   }
 
-  .communicating__address-city--form {
+  .map__communicating-address-city--form {
     margin-top: 20px;
   }
 
@@ -103,9 +142,78 @@
     padding-top: 17px;
     padding-bottom: 57px;
   }
+
+  .map__img {
+    background-image: url(../img/bg-map-tablet@1x.png);
+    height: 396px;
+    background-position: 100% -5px;
+    position: relative;
+  }
+
+  .map__map-pin {
+    position: absolute;
+    top: 146px;
+    left: 42%;
+    width: 122px;
+  }
+
+  .map__iframe {
+    border: 0;
+    height: 396px;
+    width: 100%;
+    margin-left: -3px;
+  }
+
+  .map__iframe-form {
+    height: 426px;
+    width: 100%;
+    margin-left: -20px;
+  }
+
+  .map__iframe-index {
+    margin-left: 0;
+  }
+
+  .map__iframe-catalog {
+    margin-left: 0;
+    height: 400px;
+  }
+
+  .map__communicating--catalog-block {
+    padding-bottom: 59px;
+  }
+
+  .map__img-form {
+    background-image: url(../img/bg-map-tablet@1x.png);
+    height: 394px;
+    background-position: 100% -8px;
+    position: relative;
+  }
+
+  .map__map-pin-form {
+    top: 143px;
+  }
+
+  .map__communicating-com-information {
+    padding-bottom: 61px;
+  }
 }
 
 @media (min-width: @desktop) {
+  .map {
+    max-width: 1440px;
+    margin: 0 auto;
+    position: relative;
+  }
+
+  br{
+    display: none;
+  }
+
+  .map__desktop-block {
+    display: block;
+  }
+
   .map__communicating-form {
     position: absolute;
     z-index: 1000;
@@ -128,6 +236,7 @@
     left: 110px;
     padding-right: 3px;
     margin-top: 0;
+    z-index: 1;
   }
 
   .map__communicating-offer-communicating {
@@ -142,7 +251,7 @@
   .map__communicating-address {
     text-align: left;
     margin-right: 56px;
-    margin-top: 37px;
+    margin-top: 38px;
     max-width: 185px;
   }
 
@@ -152,9 +261,10 @@
 
   .map__communicating-address-city {
     justify-content: left;
-    text-align: right;
+    text-align: left;
     margin-left: 0;
     display: flex;
+    display: block;
   }
 
   .map__communicating__address-form {
@@ -169,7 +279,29 @@
     margin-top: 36px;
   }
 
-  .communicating__address-city--form {
+  .map__communicating-address-city--form {
     margin-top: 20px;
   }
+
+  .map__iframe {
+    width: 100%;
+    margin-left: 0;
+  }
+
+  .map__img {
+    background-image: url("../img/bg-map-desktop@1x.png");
+    background-position: 0px 0px;
+    height: 396px;
+  }
+
+  .map__img-catalog {
+    height: 400px;
+  }
+
+  .map__map-pin {
+    position: absolute;
+    top: 151px;
+    left: 69.4%;
+    width: 122px;
+}
 }
