--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,21 +1,15 @@
+@import url("variables.less");
+
 @font-face {
   font-family: "Oswald-Medium";
   /* Имя шрифта */
-  src: url("../fonts/oswaldmedium.woff")/* Путь к файлу со шрифтом */
+  src: url("../fonts/oswaldmedium.woff") format("woff"), url("../fonts/oswaldmedium.woff2") format("woff2");
 }
 
 @font-face {
   font-family: "Oswald-Regular";
   /* Имя шрифта */
-  src: url("../fonts/oswaldregular.woff");
-  /* Путь к файлу со шрифтом */
-}
-
-@font-face {
-  font-family: "Arial-Regular";
-  /* Имя шрифта */
-  src: url("../fonts/arialregular.ttf");
-  /* Путь к файлу со шрифтом */
+  src: url("../fonts/oswaldregular.woff") format("woff"), url("../fonts/oswaldregular.woff2") format("woff2");
 }
 
 * {
@@ -23,12 +17,21 @@
   margin: 0;
 }
 
-@white: #fff;
-@mobile: 320px;
-@tablet: 768px;
-@desktop: 1220px;
-@retina-dpi: 144dpi;
-@retina-dppx: 1.5dppx;
+.page-header__logo-site:hover {
+  opacity: 75%;
+}
+
+.page-header__logo-site:active {
+  opacity: 50%;
+}
+
+.page-header__menu-main-sub-menu-elem-link-catalog:hover {
+ color: #707070;
+}
+
+.page-header__menu-main-sub-menu-elem-link-catalog:active {
+  color: #b7b7b7;
+ }
 
 .page-header__menu-main-sub-menu-elem-link--form:hover {
   color: #707070;
@@ -42,12 +45,20 @@
   border-bottom: 1px solid #ededed;
 }
 
+.page-header__menu-main-sub-menu-elem-link--catalog:hover {
+  color: #707070;
+}
+
+.page-header__menu-main-sub-menu-elem-link--catalog:active {
+  color: #b7b7b7;
+}
+
 .page-header__menu-main-sub-menu-elem-link {
   text-decoration: none;
   font-family: "Oswald-Medium", "Arial", sans-serif;
   font-size: 20px;
   line-height: 20px;
-  font-weight: bold;
+  font-weight: 500;
   color: #111111;
   text-transform: uppercase;
   margin-left: 1px;
@@ -66,9 +77,9 @@
   margin: 0 auto;
 }
 
-.page-header__logo-menu-image--close {
-  background-image: url(../img/icon-close.svg);
-  background-color: #fff;
+.page-header__logo-mobile_menu-close {
+  background-image: url("../img/icon-close.svg");
+  background-color: #ffffff;
   background-repeat: no-repeat;
   background-size: 20px 20px;
   width: 20px;
@@ -76,17 +87,12 @@
 }
 
 .page-header__logo-menu-image--open {
-  background-image:url("../img/mobile-menu.png");
-  background-color: #fff;
+  background-image: url("../img/mobile-menu.png");
+  background-color: #ffffff;
   background-repeat: no-repeat;
   width: 24px;
   height: 18px;
   background-size: cover;
-  }
-
-.header-background {
-  max-width: 320px;
-  margin: 0 auto;
 }
 
 @media (min-width: @mobile) {
@@ -94,12 +100,17 @@
     display: none;
   }
 
-  .page-header__logo-menu-image--close {
+  .page-header__logo {
+    height: 37px;
+    width: 191px;
+  }
+
+  .page-header__logo-mobile_menu-close {
     display: block;
   }
 
   .page-header__logo-menu-image--active {
-    background-image:url("../img/icon-fb.svg");
+    background-image: url("../img/icon-fb.svg");
     background-size: cover;
   }
 
@@ -140,7 +151,10 @@
   }
 
   .page-header__logo-mobile_menu {
-    margin-top: 2px;
+    margin-top: 0px;
+    margin-right: 2px;
+    border: 0;
+    outline: 0;
   }
 
   .page-header__menu-main-sub-menu-elem {
@@ -155,6 +169,11 @@
   .page-header {
     max-width: 708px;
     margin: 0 auto;
+  }
+
+  .page-header__logo {
+    height: 58px;
+    width: 173px;
   }
 
   .page-header__menu-main--hidden {
@@ -188,12 +207,13 @@
   .page-header__menu {
     display: flex;
     align-items: center;
+    padding-top: 12px;
   }
 
   .page-header__menu-main-sub {
     display: flex;
     flex-wrap: wrap;
-    max-width: 440px;
+    max-width: 442px;
     justify-content: flex-start;
   }
 
@@ -213,8 +233,8 @@
   }
 
   .page-header__menu-logos-links {
-    margin-right: 86px;
-    margin-left: -7px;
+    margin-left: 0;
+    margin-right: 95px;
   }
 
   .page-header__menu-main-sub-menu-elem:last-child {
@@ -235,40 +255,11 @@
     color: #b7b7b7;
   }
 
-
-  .page-header__menu-main-sub-menu-elem-li--catalog-active {
+  .page-header__menu-main-sub-menu-elem-li-catalog-active {
     position: relative;
   }
 
-  .page-header__menu-main-sub-menu-elem-li--catalog-active:after {
-   content: "";
-   width: 100%;
-   position: absolute;
-   height: 2px;
-   bottom: 10px;
-   left: 0;
-   background-color: #68b738;
-  }
-
-  .page-header__form--li-active {
-   position: relative;
-  }
-
-  .page-header__form--li-active:after {
-    content: "";
-    width: 100%;
-    position: absolute;
-    height: 2px;
-    bottom: 10px;
-    left: 0;
-    background-color: #68b738;
-   }
-
-   .page-header__menu-main-sub-menu-elem-li--active {
-    position: relative;
-  }
-
-  .page-header__menu-main-sub-menu-elem-li--active:after {
+  .page-header__menu-main-sub-menu-elem-li-catalog-active::after {
     content: "";
     width: 100%;
     position: absolute;
@@ -278,22 +269,54 @@
     background-color: #68b738;
   }
 
+  .page-header__form-li-active {
+    position: relative;
+  }
+
+  .page-header__form-li-active::after {
+    content: "";
+    width: 100%;
+    position: absolute;
+    height: 2px;
+    bottom: 10px;
+    left: 0;
+    background-color: #68b738;
+  }
+
+  .page-header__menu-main-sub-menu-elem-li-active {
+    position: relative;
+  }
+
+  .page-header__menu-main-sub-menu-elem-li-active::after {
+    content: "";
+    width: 100%;
+    position: absolute;
+    height: 2px;
+    bottom: 10px;
+    left: 0;
+    background-color: #68b738;
+  }
 }
 
 @media (min-width: @desktop) {
   .page-header__menu-logos-links {
     margin-right: 86px;
-    margin-left: 0;
-    margin-top: 7px;
-    max-width: 202px;
+    margin-left: 0px;
+    max-width: 248px;
+    margin-top: 32px;
     padding-left: 0;
   }
 
-  .page-header__form--li-active {
+  .page-header__logo {
+    height: 58px;
+    width: 202px;
+  }
+
+  .page-header__form-li-active {
     position: relative;
   }
 
-  .page-header__form--li-active::after {
+  .page-header__form-li-active::after {
     content: "";
     position: absolute;
     bottom: 11px;
@@ -303,11 +326,11 @@
     left: 0;
   }
 
-  .page-header__menu-main-sub-menu-elem-li--catalog-active {
+  .page-header__menu-main-sub-menu-elem-li-catalog-active {
     position: relative;
   }
 
-  .page-header__menu-main-sub-menu-elem-li--catalog-active::after {
+  .page-header__menu-main-sub-menu-elem-li-catalog-active::after {
     content: "";
     position: absolute;
     bottom: 9px;
@@ -318,7 +341,7 @@
   }
 
   .page-header__menu-main {
-    margin-top: 7px;
+    margin-top: 30px;
   }
 
   .page-header {
@@ -341,7 +364,6 @@
   .page-header__menu-main-sub-menu-elem-link {
     font-size: 20px;
     line-height: 24.86px;
-    color: #ffffff;
     word-break: break-word;
   }
 
@@ -395,11 +417,11 @@
     border-bottom: 1px solid #68b738;
   }
 
-  .page-header__menu-main-sub-menu-elem-li--active {
+  .page-header__menu-main-sub-menu-elem-li-active {
     position: relative;
   }
 
-  .page-header__menu-main-sub-menu-elem-li--active::after {
+  .page-header__menu-main-sub-menu-elem-li-active::after {
     width: 100%;
     height: 2px;
     background-color: #ffffff;
