--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -1,6 +1,4 @@
-@mobile: 320px;
-@tablet: 768px;
-@desktop: 1220px;
+@import url("variables.less");
 
 .programs__program {
   background-color: #f2f2f2;
@@ -26,7 +24,7 @@
 
 .programs__header-program {
   display: flex;
-  margin-bottom: 23px;
+  margin-bottom: 22px;
 }
 
 .programs__name {
@@ -38,7 +36,7 @@
 }
 
 .programs__program--standing-cat {
-  padding: 22px 34px 23px 21px;
+  padding: 22px 32px 23px 21px;
   margin-bottom: 20px;
   margin-top: 22px;
 }
@@ -63,13 +61,15 @@
   line-height: 16px;
   text-decoration: none;
   color: #111111;
-  margin-right: 10px;
+  margin-right: 12px;
+  margin-left: -2px;
 }
 
 .programs__program-main-content-link {
   display: flex;
   border-top: 1px solid #d9d9d9;
-  padding-top: 18px;
+  padding-top: 19px;
+  padding-left: 1px;
 }
 
 .programs__img-running-puma {
@@ -83,7 +83,7 @@
     margin: 0 auto;
   }
 
-  .icon-cat-slim {
+  .programs__icon-cat-slim {
     width: 39px;
   }
 
@@ -100,17 +100,19 @@
     border-radius: 50%;
     width: 50px;
     height: 50px;
-    margin-right: 20px;
+    margin-right: 18px;
     margin-top: 1px;
+    margin-left: 2px;
   }
 
   .programs__img_program-img {
-    margin-left: 9px;
+    margin-left: 7px;
     height: 47px;
   }
 
   .programs__icon-right-arrow-long {
     width: 23px;
+    height: 16px;
   }
 
   .programs__icon-right-arrow-very-long {
@@ -141,8 +143,8 @@
 
   .programs__img_program {
     position: absolute;
-    top: 93px;
-    right: 40px;
+    top: 91px;
+    right: 44px;
     width: 200px;
     height: 200px;
   }
@@ -163,7 +165,7 @@
   }
 
   .programs__program-puma {
-    padding: 68px 280px 62px 52px;
+    padding: 70px 280px 62px 52px;
   }
 
   .programs__program-link {
@@ -180,7 +182,7 @@
   }
 
   .programs__header-program {
-    margin-bottom: 25px;
+    margin-bottom: 23px;
     margin-left: 2px;
   }
 
@@ -190,11 +192,11 @@
     align-items: center;
   }
 
-  .icon-cat-slim {
-    height: 197px;
+  .programs__icon-cat-slim {
+    height: 203px;
     width: 139px;
     margin-top: -16px;
-    margin-left: 33px;
+    margin-left: 31px;
   }
 
   .icon-right-arrow-verylong {
@@ -210,7 +212,7 @@
   .programs__img-running-puma {
     width: 315px;
     height: 112px;
-    margin-left: -57px;
+    margin-left: -61px;
     margin-top: 44px;
   }
 
@@ -235,15 +237,18 @@
 
   .programs__header-program-puma-sub {
     position: absolute;
-    top: 88px;
+    top: 91px;
     right: 40px;
     width: 200px;
     height: 200px;
   }
 
   .programs__program-link-catalog-pro {
-    padding-top: 33px;
-    padding-left: 0;
+    padding-top: 32px;
+    padding-left: 2px;
+  }
+  .programs__icon-right-arrow-long {
+    margin-left: 12px;
   }
 }
 
@@ -254,7 +259,7 @@
     display: flex;
     justify-content: space-between;
     align-items: start;
-    margin-top: 23px;
+    margin-top: 21px;
   }
 
   .programs__header-program {
@@ -284,7 +289,7 @@
     margin-left: 50px;
   }
 
-  .icon-cat-slim {
+  .programs__icon-cat-slim{
     height: 95px;
     width: 86px;
     margin-top: -6px;
@@ -292,13 +297,13 @@
   }
 
   .programs__name-low-weight {
-    margin-top: 36px;
-    margin-left: 41px;
+    margin-top: 35px;
+    margin-left: 43px;
   }
 
   .programs__program-content-your-cat-weights {
     margin-left: 51px;
-    margin-top: 15px;
+    margin-top: 17px;
     max-width: 476px;
     padding-right: 42px;
     padding-bottom: 24px;
@@ -353,14 +358,6 @@
   }
 
   .programs__program-link {
-    max-width: 108px;
-  }
-
-  .how-it-is-work__header {
-    max-width: 600px;
-  }
-
-  .how-it-is-work__sub {
-    max-width: 245px;
+    max-width: 110px;
   }
 }
