--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,13 +1,12 @@
-@import "page-header.less";
-@import "header-background.less";
-@import "programs.less";
-@import "how-it-is-work.less";
-@import "live-example.less";
-@import "communicating.less";
-@import "map.less";
-@import "footer.less";
-@import "main-form.less";
-@import "main-catalog.less";
-@import "find-all-goods.less";
-@import "additional-goods.less";
-@import "main-index.less";
+@import "blocks/page-header.less";
+@import "blocks/header-background.less";
+@import "blocks/programs.less";
+@import "blocks/how-it-is-work.less";
+@import "blocks/live-example.less";
+@import "blocks/map.less";
+@import "blocks/footer.less";
+@import "blocks/main-form.less";
+@import "blocks/main-catalog.less";
+@import "blocks/find-all-goods.less";
+@import "blocks/additional-goods.less";
+@import "blocks/main-index.less";
