--- a/source/less/blocks/additional-goods.less
+++ b/source/less/blocks/additional-goods.less
@@ -6,6 +6,18 @@
 
 .additional-goods__article-order {
   text-decoration: none;
+  margin-bottom: 17px;
+  margin-top: 14px;
+  text-transform: uppercase;
+  color: #ffffff;
+  border: 0;
+  background-color: #68b738;
+  padding: 10px 108px 10px 111px;
+  max-width: 280px;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  display: block;
 }
 
 .additional-goods__hidden-article-header {
@@ -33,21 +45,6 @@
   font-size: 14px;
   line-height: 14px;
   font-family: "Arial", "Tahoma", sans-serif;
-}
-
-.additional-goods__article-order {
-  margin-bottom: 17px;
-  margin-top: 14px;
-  text-transform: uppercase;
-  color: #ffffff;
-  border: 0;
-  background-color: #68b738;
-  padding: 10px 108px 10px 111px;
-  max-width: 280px;
-  font-family: "Oswald-Regular", "Arial", sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-  display: block;
 }
 
 .additional-goods__background-img {
@@ -305,6 +302,7 @@
     padding-left: 41px;
     padding-right: 41px;
     background-color: green;
+    background-image: url("../img/gift-photo-desktop@1x.jpg");
   }
 
   .additional-goods__article-header {
@@ -316,7 +314,7 @@
   .additional-goods__gift-image {
     margin-bottom: 51px;
     margin-left: 2px;
-    margin-top: 0px;
+    margin-top: 0;
   }
 
   .additional-goods__article-content {
@@ -443,16 +441,12 @@
     width: 895px;
   }
 
-  .additional-goods__green-background {
-    background-image: url("../img/gift-photo-desktop@1x.jpg");
-  }
-
   .additional-goods__br {
     display: block;
   }
 }
 
-@media (min-width:@desktopBig) {
+@media (min-width: @desktopBig) {
   .additional-goods_header-right-line {
     position: absolute;
     top: 37px;
