--- a/source/less/blocks/header-background.less
+++ b/source/less/blocks/header-background.less
@@ -191,7 +191,7 @@
     right: -1.9%;
     margin-left: auto;
     background-color: #65a93c;
-    background-image: url(../img/index-background-mobile.png);
+    background-image: url("../img/index-background-mobile.png");
     z-index: -10000;
     background-position: 210px -17px;
     background-repeat: no-repeat;
@@ -264,9 +264,9 @@
     right: -9%;
     margin-left: auto;
     background-color: #65a93c;
-    background-image: url(../img/index-background-desktop@2x.jpg);
+    background-image: url("../img/index-background-desktop@2x.jpg");
     z-index: -10000;
-    background-position: 10px 0px;
+    background-position: 10px 0;
     background-repeat: no-repeat;
     background-size: 700px 700px;
   }
