--- a/source/less/blocks/live-example.less
+++ b/source/less/blocks/live-example.less
@@ -136,7 +136,7 @@
 
   .live-example__numbers-sub-header-sixty-days {
     margin-left: 1px;
-    margin-bottom: 0px;
+    margin-bottom: 0;
     margin-top: 8px;
   }
 
@@ -645,7 +645,7 @@
     background-position: 82px 0;
     background-color: transparent;
     background-repeat: no-repeat;
-    background-image: url(../img/after-desktop@1x.png);
+    background-image: url("../img/after-desktop@1x.png");
   }
 }
 
@@ -663,7 +663,7 @@
 
   .live-example__numbers-sub-header-sixty-days {
     margin-left: -5px;
-    margin-top: 0px;
+    margin-top: 0;
   }
 
   .live-example__content-slider {
