--- a/source/less/blocks/main-catalog.less
+++ b/source/less/blocks/main-catalog.less
@@ -8,6 +8,16 @@
 }
 
 .main-catalog__good-order {
+  background-color: #68b738;
+  text-transform: uppercase;
+  font-size: 16px;
+  line-height: 20px;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
+  border: 0;
+  color: #ffffff;
+  padding: 10px 108px 10px 111px;
+  margin-bottom: 24px;
+  max-width: 282px;
   text-decoration: none;
 }
 
@@ -76,19 +86,6 @@
   margin-bottom: 0;
 }
 
-.main-catalog__good-order {
-  background-color: #68b738;
-  text-transform: uppercase;
-  font-size: 16px;
-  line-height: 20px;
-  font-family: "Oswald-Regular", "Arial", sans-serif;
-  border: 0;
-  color: #ffffff;
-  padding: 10px 108px 10px 111px;
-  margin-bottom: 24px;
-  max-width: 282px;
-}
-
 .main-catalog__good-content-sub-text {
   display: flex;
 }
@@ -123,7 +120,7 @@
   }
 
   .main-catalog__good-header-sub-sixth {
-    margin-left: 0px;
+    margin-left: 0;
   }
 
   .main-catalog__good-header-sub-seventh {
@@ -145,7 +142,7 @@
     margin-bottom: 11px;
   }
 
-  .main-catalog__show-more-plus:before {
+  .main-catalog__show-more-plus::before {
     content: "";
     display: block;
     width: 100%;
@@ -157,7 +154,7 @@
     margin-top: -1px;
   }
 
-  .main-catalog__show-more-plus:after {
+  .main-catalog__show-more-plus::after {
     content: "";
     display: block;
     width: 2px;
@@ -177,11 +174,12 @@
     font-size: 36px;
     line-height: 60px;
     font-family: "Oswald-Regular", "Arial", sans-serif;
-    padding-bottom: 2px;
-    margin-top: 15px;
-    margin-left: 22px;
-    margin-bottom: 26px;
+    padding-top: 15px;
+    padding-left: 22px;
+    padding-bottom: 26px;
     display: flex;
+    margin: 0 auto;
+    max-width: 320px;
   }
 
   .main__catalog--small-mobile-image {
@@ -245,12 +243,12 @@
     font-size: 60px;
     line-height: 60px;
     font-family: "Oswald-Regular", "Arial", sans-serif;
-    padding-bottom: 2px;
-    margin-top: 42px;
-    margin-left: 27px;
+    padding-top: 42px;
+    padding-left: 27px;
     display: flex;
-    margin-bottom: 165px;
-    max-width: 460px;
+    padding-bottom: 165px;
+    max-width: 768px;
+    margin: 0 auto;
   }
 
   .main-catalog__show-more-plus {
@@ -617,8 +615,8 @@
   }
 
   .main-catalog__fourth-image {
-   top: -85px;
-   width: 247px;
+    top: -85px;
+    width: 247px;
   }
 
   .main-catalog__fifth-image {
