--- a/source/less/blocks/main-form.less
+++ b/source/less/blocks/main-form.less
@@ -289,7 +289,6 @@
 
 .main-form__sub-label-input-name {
   font-size: 16px;
-  max-width: 229px;
   line-height: 18px;
   font-family: "Oswald-Regular", "Arial", sans-serif;
   border: 1px solid #e6e6e6;
@@ -525,16 +524,12 @@
   }
 
   .main-form__first-three-inputs {
+    margin-top: 17px;
+    margin-left: 32px;
     font-size: 20px;
     line-height: 20px;
     max-width: 631px;
     margin-bottom: 12px;
-  }
-
-  .main-form__first-three-inputs {
-    margin-top: 17px;
-    margin-left: 32px;
-    margin-bottom: 11px;
   }
 
   .main-form__sub-label-input-name {
@@ -766,7 +761,7 @@
     margin-top: 22px;
     position: absolute;
     right: -1%;
-    top: 0px;
+    top: 0;
   }
 
   .main-form__textarea {
@@ -961,6 +956,7 @@
     max-width: 591px;
     margin-left: 0;
     margin-bottom: 1px;
+    margin-top: 27.5px;
   }
 
   .main-form__sub-radio {
@@ -975,11 +971,6 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-  }
-
-  .main-form__first-three-inputs {
-    margin-left: 0;
-    margin-top: 27.5px;
   }
 
   .main-form__sub-label-input-name {
@@ -1280,5 +1271,5 @@
   .main-form__commentary {
     margin-top: 40px;
     position: relative;
-}
+  }
 }
