--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -58,7 +58,7 @@
   }
 
   .map__img {
-    background-image: url(../img/bg-map-mobile@1x.png);
+    background-image: url("../img/bg-map-mobile@1x.png");
     width: 100%;
     height: 363px;
     background-position: -1px -39px;
@@ -144,7 +144,7 @@
   }
 
   .map__img {
-    background-image: url(../img/bg-map-tablet@1x.png);
+    background-image: url("../img/bg-map-tablet@1x.png");
     height: 396px;
     background-position: 100% -5px;
     position: relative;
@@ -184,7 +184,7 @@
   }
 
   .map__img-form {
-    background-image: url(../img/bg-map-tablet@1x.png);
+    background-image: url("../img/bg-map-tablet@1x.png");
     height: 394px;
     background-position: 100% -8px;
     position: relative;
@@ -206,7 +206,7 @@
     position: relative;
   }
 
-  br{
+  br {
     display: none;
   }
 
@@ -264,7 +264,6 @@
     text-align: left;
     margin-left: 0;
     display: flex;
-    display: block;
   }
 
   .map__communicating__address-form {
@@ -290,7 +289,7 @@
 
   .map__img {
     background-image: url("../img/bg-map-desktop@1x.png");
-    background-position: 0px 0px;
+    background-position: 0 0;
     height: 396px;
   }
 
@@ -303,5 +302,5 @@
     top: 151px;
     left: 69.4%;
     width: 122px;
-}
+  }
 }
