--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -1,7 +1,15 @@
 @import url("variables.less");
 
 .footer__right-logo-link-organization {
-  fill:#666666;
+  fill: #666666;
+  font-size: 16px;
+  line-height: 16px;
+  font-family: "Arial", "Tahoma", sans-serif;
+  color: #444444;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .footer__right-logo-link-organization:hover svg {
@@ -32,7 +40,6 @@
   background-color: #f2f2f2;
   display: flex;
   flex-direction: column;
-  padding-top: 33px;
   padding-bottom: 39px;
   align-items: center;
   max-width: 320px;
@@ -59,19 +66,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 22px;
+  padding-top: 20px;
   border-top: 1px solid #d9d9d9;
-}
-
-.footer__right-logo-link-organization {
-  font-size: 16px;
-  line-height: 16px;
-  font-family: "Arial", "Tahoma", sans-serif;
-  color: #444444;
-  text-decoration: none;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
 }
 
 .footer__social-links-catalog {
@@ -153,6 +149,7 @@
     width: 35px;
     height: 35px;
   }
+
   .footer__name-org {
     width: 115px;
     margin-right: 132px;
@@ -204,7 +201,8 @@
   }
 
   .footer__right-logo-organization {
-    margin-left: 15px;
+    margin-left: -7px;
+    margin-top: -3px;
   }
 
   .footer__footer-content {
@@ -253,7 +251,7 @@
     padding-left: 0;
     max-width: 125px;
     flex-wrap: wrap;
-    padding-right: 0px;
+    padding-right: 0;
   }
 
   .footer__social-image-vk {
@@ -278,11 +276,6 @@
 
   .footer-catalog {
     padding-top: 44px;
-  }
-
-  .footer__right-logo-organization {
-    margin-left: -7px;
-    margin-top: -3px;
   }
 
   .footer__social-links-li-instagramm-catalog {
@@ -313,12 +306,12 @@
 
   .footer__right-logo-organization {
     margin-left: -5px;
-    margin-top: 0px;
+    margin-top: 0;
   }
 
   .footer__right-logo-link-organization {
     margin-right: 0;
-    margin-top: 0px;
+    margin-top: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -368,5 +361,5 @@
   .footer__social-links-li-instagramm-form {
     margin-top: 3px;
     margin-left: 4px;
-}
+  }
 }
