--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -26,12 +26,12 @@
 }
 
 .page-header__menu-main-sub-menu-elem-link-catalog:hover {
- color: #707070;
+  color: #707070;
 }
 
 .page-header__menu-main-sub-menu-elem-link-catalog:active {
   color: #b7b7b7;
- }
+}
 
 .page-header__menu-main-sub-menu-elem-link--form:hover {
   color: #707070;
@@ -151,7 +151,7 @@
   }
 
   .page-header__logo-mobile_menu {
-    margin-top: 0px;
+    margin-top: 0;
     margin-right: 2px;
     border: 0;
     outline: 0;
@@ -301,7 +301,7 @@
 @media (min-width: @desktop) {
   .page-header__menu-logos-links {
     margin-right: 86px;
-    margin-left: 0px;
+    margin-left: 0;
     max-width: 248px;
     margin-top: 32px;
     padding-left: 0;
