add interactional labels

--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -263,7 +263,7 @@
     justify-content: left;
     text-align: left;
     margin-left: 0;
-    display: flex;
+    display: block;
   }
 
   .map__communicating__address-form {
@@ -280,6 +280,8 @@
 
   .map__communicating-address-city--form {
     margin-top: 20px;
+    display: block;
+    text-align: left;
   }
 
   .map__iframe {
