fixed a lof of content

--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -306,7 +306,7 @@
 
   .footer__right-logo-organization {
     margin-left: -5px;
-    margin-top: 0;
+    margin-top: -4px;
   }
 
   .footer__right-logo-link-organization {
