--- a/source/less/blocks/live-example.less
+++ b/source/less/blocks/live-example.less
@@ -9,6 +9,10 @@
 
 .live-example__slider-button {
   position: relative;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
+  font-family: "Oswald-Regular", "Arial", sans-serif;
 }
 
 .live-example__slider-button:hover::after {
@@ -18,7 +22,7 @@
   bottom: -1px;
   left: 0;
   height: 1px;
-  background-color: #989898;;
+  background-color: #989898;
 }
 
 .live-example__slider-button:active {
@@ -85,13 +89,6 @@
   padding-top: 37px;
   padding-bottom: 25px;
   position: relative;
-}
-
-.live-example__slider-button {
-  font-size: 16px;
-  line-height: 20px;
-  text-transform: uppercase;
-  font-family: "Oswald-Regular", "Arial", sans-serif;
 }
 
 .live-example__slider-slide {
@@ -254,7 +251,7 @@
   .live-example__header {
     font-size: 60px;
     line-height: 60px;
-    font-family: "Oswald-Regular";
+    font-family: "Oswald-Regular", "Arial", sans-serif;
     margin-top: 26px;
     margin-bottom: 65px;
     display: flex;
@@ -511,6 +508,7 @@
     margin-left: 80px;
     max-width: 434px;
     margin-top: 70px;
+    word-break: break-word;
   }
 
   .live-example__numbers-plus-price {
@@ -556,6 +554,7 @@
     margin-top: 28px;
     padding-left: 0;
     margin-left: 0;
+    padding-bottom: 50px;
   }
 
   .live-example__price-fifteen-thousand {
