--- a/source/less/blocks/main-catalog.less
+++ b/source/less/blocks/main-catalog.less
@@ -497,6 +497,7 @@
     margin-bottom: 17px;
     margin-left: 0;
     letter-spacing: 0.1px;
+    word-break: break-word;
   }
 
   .main-catalog__good-data-sub {
@@ -566,7 +567,7 @@
   }
 
   .main-catalog__good:nth-child(5n) {
-    margin-bottom: 0;
+    margin-bottom: 143px;
   }
 
   .main-catalog__good:nth-child(6n) {
