--- a/source/less/blocks/live-example.less
+++ b/source/less/blocks/live-example.less
@@ -497,7 +497,7 @@
   .live-example__content {
     flex-direction: row;
     display: flex;
-    max-width: 1316px;
+    max-width: 100%;
     margin: 0;
   }
 
