--- a/source/less/blocks/live-example.less
+++ b/source/less/blocks/live-example.less
@@ -121,6 +121,15 @@
     margin: 0 auto;
   }
 
+  .live-example__header {
+    font-size: 36px;
+    line-height: 20px;
+    font-family: "Oswald-Regular", "Arial", sans-serif;
+    display: flex;
+    margin-top: 19px;
+    margin-bottom: 43px;
+  }
+
   .live-example__numbers-sub-header-five-kg {
     margin-left: -4px;
     margin-top: 2px;
@@ -178,7 +187,7 @@
   }
 
   .live-example__numbers-plus-price {
-    margin-top: 23px;
+    margin-top: 24px;
   }
 
   .live-example__price {
