--- a/source/less/blocks/main-catalog.less
+++ b/source/less/blocks/main-catalog.less
@@ -56,7 +56,7 @@
   max-width: 74px;
   text-transform: uppercase;
   margin-bottom: 13px;
-  margin-left: 1px;
+  margin-left: 8px;
 }
 
 .main-catalog__good-content {
@@ -69,7 +69,7 @@
 .main-catalog__good-data {
   display: flex;
   flex-direction: column;
-  margin-top: 20px;
+  margin-top: 23px;
 }
 
 .main-catalog__good-data-sub {
@@ -137,8 +137,8 @@
   .main-catalog__link-to-goods {
     text-align: center;
     text-decoration: none;
-    max-width: 74px;
-    margin-left: -1px;
+    max-width: 94px;
+    margin-left: -16px;
     margin-bottom: 11px;
   }
 
@@ -164,6 +164,25 @@
     top: 0;
     left: 50%;
     margin-left: -1px;
+  }
+
+  .main-catalog__link-to-goods-second-item {
+    text-align: center;
+    text-decoration: none;
+    max-width: 94px;
+    margin-left: -12px;
+    margin-bottom: 11px;
+  }
+
+  .main-catalog__good-header-second-item {
+    font-size: 16px;
+    line-height: 20px;
+    font-family: "Oswald-Regular", "Arial", sans-serif;
+    color: #111111;
+    max-width: 74px;
+    text-transform: uppercase;
+    margin-bottom: 13px;
+    margin-left: 3px;
   }
 
   .main-catalog__plus-mobile {
@@ -226,11 +245,27 @@
   }
 
   .main-catalog__good-data-second {
-    margin-top: 20px;
+    margin-top: 21px;
   }
 
   .main-catalog__good-order-last-child {
     margin-top: -3px;
+  }
+
+  .main-catalog__link-to-goods-fourth {
+    margin-left: -13px;
+  }
+
+  .main-catalog__good-header-fourth {
+    margin-left: 3px;
+  }
+
+  .main-catalog__good-header-sixth {
+    margin-left: 0px;
+  }
+
+  .main-catalog__link-to-goods-sixth {
+    margin-left: -11px;
   }
 }
 
@@ -305,7 +340,7 @@
 
   .main-catalog__good-data {
     align-items: center;
-    margin-top: 160px;
+    margin-top: 162px;
     max-width: 250px;
   }
 
@@ -436,6 +471,10 @@
 
   .main-catalog__link-to-goods {
     max-width: 138px;
+  }
+
+  .main-catalog__link-to-goods {
+    margin-left: 0;
   }
 }
 
